@startuml

title __INTERPRETATION's Class Diagram__\n

  namespace main {
    namespace client {
      namespace interpretation {
        abstract class main.client.interpretation.Inter {
            {abstract} + calculate()
            {abstract} + getResult()
            {abstract} + insert()
            + integerValue()
            {abstract} + select()
            {abstract} + testAndDate()
            {abstract} + update()
        }
      }
    }
  }
  

  namespace main {
    namespace client {
      namespace interpretation {
        class main.client.interpretation.InterTestBoyko {
            + calculate()
            + getResult()
            + insert()
            + select()
            + testAndDate()
            + update()
        }
      }
    }
  }
  

  namespace main {
    namespace client {
      namespace interpretation {
        class main.client.interpretation.InterTestGAGE {
            + calculate()
            + getResult()
            + insert()
            + select()
            + setText()
            + testAndDate()
            + update()
        }
      }
    }
  }
  

  main.client.interpretation.InterTestBoyko -up-|> main.client.interpretation.Inter
  main.client.interpretation.InterTestBoyko o-- entity.InterpretationTestBoyko : inter
  main.client.interpretation.InterTestGAGE -up-|> main.client.interpretation.Inter
  main.client.interpretation.InterTestGAGE o-- entity.InterpretationTestGAGE : inter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
